Handle Simple Authorization

--- a/src/app/Login/login-form/login-form.component.html
+++ b/src/app/Login/login-form/login-form.component.html
@@ -20,7 +20,7 @@
                             <input [(ngModel)]=password type="text" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-group">
-                            <button (click)="doLogin()" type="button" class="btn btn-outline-primary">Log In</button>
+                            <button (click)="doLogin()" type="button" class="btn btn-outline-light">Log In</button>
                         </div>
                     </form>
                 </div>
