--- a/src/app/eb/eb-create/ebp-list-current/ebp-list-current.component.html
+++ b/src/app/eb/eb-create/ebp-list-current/ebp-list-current.component.html
@@ -22,7 +22,7 @@
                     <td>{{ebp.produit}}</td>
                     <td>{{ebp.qteDemande}}</td>
                     <td>{{ebp.product_desc}}</td>
-                    <td> <button class="btn btn-danger fa fa-trash" (click)="onEbpDelete(ebp)" type="button"></button>
+                    <td> <button class="btn btn-danger fa fa-trash" (click)="deleteProduct(ebp)" type="button"></button>
                     </td>
                 </tr>
             </tbody>
