--- a/src/app/eb/eb-list/eb-list.component.html
+++ b/src/app/eb/eb-list/eb-list.component.html
@@ -1,4 +1,20 @@
 <div class="card shadow mt-3 mb-3">
+    <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <input type="text" class="form-control"  placeholder="enter la date " [(ngModel)]=date>
+            <button id="btn1" class="btn btn-block  fa fa-calendar" (click)="getEbBySaveDate()"></button>
+          </div>
+          <div class="col-md-4">
+            <input type="text" class="form-control"  placeholder="enter le libelle" [(ngModel)]=libelle>
+            <button id="btn1" class="btn btn-block fa fa-archive" (click)="getEbByEntite()" ></button>
+          </div>
+          <div class="col-md-4">
+            <input type="text" class="form-control"  placeholder="enter le cin du chef" [(ngModel)]=cin>
+            <button id="btn1" class="btn btn-block  fa fa-address-book" (click)="getEbByPersonnel()" ></button>
+          </div>
+        </div>
+      </div>
     <div class="card-header">
         Tout les Expressions Des Besoin 
     </div>
