--- a/src/app/eb/eb-list/eb-list.component.html
+++ b/src/app/eb/eb-list/eb-list.component.html
@@ -1,19 +1,36 @@
 <div class="card shadow mt-3 mb-3">
-    <div class="container">
-        <div class="row" >
-          <div class="col-md-4">
-            <input type="date" class="form-control" (change)="getEbBySaveDate()"  [(ngModel)]=date>
-          </div>
-          <div class="col-md-4">
-            <input type="text" class="form-control" (change)="getEbByEntite()"  placeholder="enter le libelle" [(ngModel)]=libelle>
-          </div>
-          <div class="col-md-4">
-            <input type="text" class="form-control" (change)="getEbByPersonnel()"  placeholder="enter le cin du chef" [(ngModel)]=cin>
-          </div>
-        </div>
-      </div>
+
     <div class="card-header">
-        Tout les Expressions Des Besoin 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="dept">Departement</label>
+                        <select class="form-control" id="dept" [(ngModel)]="libelle" (change)="getEbByEntite()">
+                            <option *ngFor="let dept of deptList" value="{{dept.libelle}}">
+                                {{dept.libelle}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="personnel">Personnel</label>
+                        <select class="form-control" id="personnel" [(ngModel)]="cin" (change)="getEbByPersonnel()">
+                            <option *ngFor="let personnel of personnelList" value="{{personnel.cin}}">
+                                {{personnel.name}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="date">Date De Creation</label>
+                        <input id="date" type="date" class="form-control" (change)="getEbBySaveDate()" [(ngModel)]=date>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="card-body table-responsive">
         <table class="table table-dark">
@@ -21,8 +38,8 @@
                 <tr>
                     <th>Title</th>
                     <th>Created At</th>
-                    <th>Last Update</th>
                     <th>Statu</th>
+                    <th>Personnel</th>
                     <th>Departement</th>
                     <th>Action</th>
                 </tr>
@@ -36,12 +53,14 @@
                 <tr *ngFor="let eb of ebList">
                     <td>{{eb.title}}</td>
                     <td>{{eb.saveDate}}</td>
-                    <td>{{eb.lastUpDate}}</td>
-                    <td><app-statut [statut]="eb.statut"></app-statut></td>
+                    <td>
+                        <app-statut [statut]="eb.statut"></app-statut>
+                    </td> 
+                    <td>{{eb.personnel.name}}</td>
                     <td>{{eb.dept.libelle}}</td>
                     <td>
                         <button class="btn btn-danger fa fa-trash mr-2" (click)="onEbDelete(eb)"></button>
-                        <button class="btn btn-primary fa fa-eye mr-2" (click)="onEbShow(eb)" ></button>
+                        <button class="btn btn-primary fa fa-eye mr-2" (click)="onEbShow(eb)"></button>
 
                     </td>
                 </tr>
@@ -53,7 +72,3 @@
         <button style="float: right;" type="button" class="btn btn-outline-light" (click)="onEbpUpdate()">Save</button>
     </div>
 </div>
-
-
-
-
