--- a/src/app/eb/eb-list/eb-list.component.html
+++ b/src/app/eb/eb-list/eb-list.component.html
@@ -1,5 +1,4 @@
 <div class="card shadow mt-3 mb-3">
-
     <div class="card-header">
         <div class="container">
             <div class="row">
@@ -38,7 +37,7 @@
                 <tr>
                     <th>Title</th>
                     <th>Created At</th>
-                    <th>Statu</th>
+                    <th>Statut</th>
                     <th>Personnel</th>
                     <th>Departement</th>
                     <th>Action</th>
@@ -55,20 +54,43 @@
                     <td>{{eb.saveDate}}</td>
                     <td>
                         <app-statut [statut]="eb.statut"></app-statut>
-                    </td> 
+                    </td>
                     <td>{{eb.personnel.name}}</td>
                     <td>{{eb.dept.libelle}}</td>
                     <td>
                         <button class="btn btn-danger fa fa-trash mr-2" (click)="onEbDelete(eb)"></button>
-                        <button class="btn btn-primary fa fa-eye mr-2" (click)="onEbShow(eb)"></button>
+                        <button data-toggle="modal" data-target="#myModal" class="btn btn-primary fa fa-eye mr-2"
+                            (click)="onEbShow(eb)"></button>
 
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
-    <div class="card-footer text-muted" style="background-color: darkgray;">
-        <app-ebp-list></app-ebp-list>
-        <button style="float: right;" type="button" class="btn btn-outline-light" (click)="onEbpUpdate()">Save</button>
+    <!--<div class="card-footer text-muted" style="background-color: darkgray;">
+        
+        </div> <button style="float: right;" type="button" class="btn btn-outline-light"
+            (click)="onEbpUpdate()">Save</button>
+    </div>-->
+
+    <!-- Modal -->
+</div>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Produits</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <app-ebp-list></app-ebp-list>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="onEbpUpdate()">Save changes</button>
+            </div>
+        </div>
     </div>
 </div>
