Sprint1 add category select

--- a/src/app/eb/eb-create/eb-create.component.html
+++ b/src/app/eb/eb-create/eb-create.component.html
@@ -11,13 +11,13 @@
         <button (click)="onSaveEb()" [disabled]="!ebValidation()" type="submit" class="btn btn-primary ">Submit</button>
     </div> 
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4 mb-2">
             <app-ebp-form></app-ebp-form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-8 mb-2">
             <app-ebp-list-current></app-ebp-list-current>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-12">
             <app-eb-list-current></app-eb-list-current>
         </div>
     </div>
