--- a/src/app/eb/eb-list/ebp-list/ebp-list.component.html
+++ b/src/app/eb/eb-list/ebp-list/ebp-list.component.html
@@ -15,7 +15,7 @@
                 </td>
             </tr>
             <tr *ngFor="let ebp of ebpList">
-                <td>{{ebp.produit}}</td>
+                <td>{{ebp.produit.libelle}}</td>
                 <td>{{ebp.product_desc}}</td>
                 <td><input type="number" [(ngModel)]=ebp.qteDemande class="form-control"></td>
                 <td><input type="number" [(ngModel)]=ebp.qteAccorde class="form-control"></td>
