add logo for fstg

--- a/src/app/chef-dash-board/chef-dash-board.component.html
+++ b/src/app/chef-dash-board/chef-dash-board.component.html
@@ -2,7 +2,7 @@
 
   <!-- Sidebar -->
   <div class="bg-dark border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading" style="color: white;">DashBoard</div>
+    <div class="sidebar-heading"><img src="https://www.supmaroc.com/wp-content/uploads/FST-marrakech.jpg" alt="" height="90px" width="200px"></div>
     <hr style="color: white;">
     <div class="list-group list-group-flush">
       <a style="color: white;" [routerLink]="['/login']"
