--- a/src/app/eb/eb-list/eb-list-comptable/eb-list-comptable.component.html
+++ b/src/app/eb/eb-list/eb-list-comptable/eb-list-comptable.component.html
@@ -43,13 +43,13 @@
                     <th>Action</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody *ngFor="let eb of ebList">
                 <tr *ngIf="ebList.length==0">
                     <td class="alert alert-secondary" colspan="6" role="alert">
                         No data to display.
                     </td>
                 </tr>
-                <tr *ngFor="let eb of ebList">
+                <tr *ngIf="eb.statut==valider" >
                     <td>{{eb.title}}</td>
                     <td>{{eb.saveDate}}</td>
                     <td >
@@ -69,22 +69,31 @@
     </div>
 
 </div>
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Produits</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <app-ebp-list></app-ebp-list>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="onEbpUpdate()">Save changes</button>
-            </div>
-        </div>
+<div class="card shadow mt-3 mb-3">
+    <div class="card-header">Demande des prix</div>
+    <div class="card-body table-responsive">
+        <table class="table table-bordered table-hover">
+            <thead >
+                <tr>
+                    <th>Produit</th> 
+                    <th>Desc</th>
+                    <th>Q-Accorder</th>
+                </tr>
+                </thead>
+                <tbody *ngFor="let eb of ebList">
+                    <tr *ngIf="ebList.length==0">
+                        <td class="alert alert-secondary" colspan="5" role="alert">
+                            No data to display.
+                        </td>
+                    </tr>
+                    <tr *ngFor="let ebpr of eb.ebp">
+                        <td>{{ebpr.produit.libelle}}</td>
+                        <td>{{ebpr.product_desc}}</td>
+                        <td>{{ebpr.qteAccorde}}</td>  
+                    </tr>
+                </tbody>
+        </table>
+        
     </div>
+
 </div>
