--- a/src/app/view/dashboard/stuf-dash-board/stuf-dash-board.component.html
+++ b/src/app/view/dashboard/stuf-dash-board/stuf-dash-board.component.html
@@ -22,7 +22,7 @@
   <div id="page-content-wrapper" style="background-color: darkgray;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom mb-3">
       <button class="btn btn-primary mr-2" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></button>
-      <span>  <h2 style="color: white;">STUF DashBoard, Welcom {{username}}</h2></span>
+      <span>  <h2 style="color: white;">Stuf DashBoard, Welcom {{username}}</h2></span>
     </nav>
     <div class="container-fluid">
       <router-outlet name="dashboard"></router-outlet>
