--- a/src/app/view/eb/eb-list/eb-list-stuf/eb-list-stuf.component.html
+++ b/src/app/view/eb/eb-list/eb-list-stuf/eb-list-stuf.component.html
@@ -1,88 +1,3 @@
 <div class="card shadow mt-3 mb-3">
-    <div class="card-header">
-        
-        
-    </div>
-    <div class="card-body table-responsive">
-        <table class="table table-dark">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Created At</th>
-                    <th>Statut</th>
-                    <th>Personnel</th>
-                    <th>Departement</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngIf="ebList.length==0">
-                    <td class="alert alert-secondary" colspan="6" role="alert">
-                        No data to display.
-                    </td>
-                </tr>
-                <tr *ngFor="let eb of ebList">
-                    <td>{{eb.title}}</td>
-                    <td>{{eb.saveDate}}</td>
-                    <td>
-                        <app-statut [statut]="eb.statut"></app-statut>
-                    </td>
-                    <td>{{eb.personnel.name}}</td>
-                    <td>{{eb.dept.libelle}}</td>
-                    <td>
-                        <button class="btn btn-danger fa fa-trash mr-2" (click)="onEbDelete(eb)"></button>
-                        <button data-toggle="modal" data-target="#myModal" class="btn btn-primary fa fa-eye mr-2"
-                            (click)="onEbShow(eb)"></button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-</div>
-<div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Produits</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <table class="table table-bordered table-hover">
-                    <thead>
-                        <tr>
-                            <th>Produit</th>
-                            <th>Desc</th>
-                            <th>Statut</th>
-                            <th>Q-Demander</th>
-                            <th>Q-Accorder</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngIf="ebpList.length==0">
-                            <td class="alert alert-secondary" colspan="5" role="alert">
-                                No data to display.
-                            </td>
-                        </tr>
-                        <tr *ngFor="let ebp of ebpList">
-                            <td>{{ebp.produit.libelle}}</td>
-                            <td>{{ebp.product_desc}}</td>
-                            <td>{{ebp.besoin_statut}}</td>
-                            <td><input [disabled]="ebp.besoin_statut=='Accorder'" [min]=1 type="number" [(ngModel)]=ebp.qteDemande class="form-control col-xs-2"></td>
-                            <td>{{ebp.qteAccorde}}</td>   
-                        </tr>
-                    </tbody>
-                </table>
-
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="onEbpUpdate()">Save
-                    changes</button>
-            </div>
-        </div>
-    </div>
+    <app-eb-list-current></app-eb-list-current>
 </div>
