--- a/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
+++ b/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
@@ -13,6 +13,9 @@
         <a style="color: white;" [routerLink]="[{ outlets: {dashboard:['demmande-list-create'] } }]"
         class="list-group-item list-group-item-action bg-dark"><i class="fa fa-list" aria-hidden="true"></i>Ajouter
       une demmande</a>
+      <a style="color: white;" [routerLink]="[{ outlets: {dashboard:['product-list-create'] } }]"
+        class="list-group-item list-group-item-action bg-dark"><i class="fa fa-list" aria-hidden="true"></i>Ajouter
+      un produit</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
