--- a/src/app/view/achat/achat/achat.component.html
+++ b/src/app/view/achat/achat/achat.component.html
@@ -1,21 +1,22 @@
+<!--Achat Statuts-->
 <div class="card mb-3 mr-3 ml-3 shadow">
     <div class="card-body">
         <ul class="nav nav-pills justify-content-center">
             <li class="nav-item">
                 <a [ngClass]="[achat.statut === statuts[1] ? 'active':'']" class="nav-link">
-                    <h3>Demmande De Prix</h3>
+                    <h4>Demmande De Prix</h4>
                 </a>
             </li>
             <button disabled type="button" class="btn btn-secondary fa fa-arrow-right dark mr-2 ml-2"></button>
             <li class="nav-item">
                 <a [ngClass]="[achat.statut === statuts[2] ? 'active':'']" class="nav-link">
-                    <h3>Devis Recu</h3>
+                    <h4>Devis Recu</h4>
                 </a>
             </li>
             <button disabled type="button" class="btn btn-secondary fa fa-arrow-right dark mr-2 ml-2"></button>
             <li class="nav-item">
                 <a [ngClass]="[achat.statut === statuts[3] ? 'active':'']" class="nav-link">
-                    <h3>Commande Comfirmer</h3>
+                    <h4>Bon De Commande</h4>
                 </a>
             </li>
         </ul>
@@ -23,70 +24,10 @@
 
 </div>
 
-
+<!--Demmande De Prix Bruillon-->
 <app-demande-prix [hidden]="achat.statut===statuts[3]||achat.statut===statuts[2]"></app-demande-prix>
-<app-commande-bon [hidden]="achat.statut!==statuts[2] || edit==0"></app-commande-bon>
-
-
-<div class="container-fluid" [hidden]="achat.statut!==statuts[3] || edit==1">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Bon De Commande <i><u>{{achat.ref}}</u></i></h1>
-            <button style="float: right;" (click)="onEditClick()" type="button" class="btn btn-primary">Modifier</button>
-        </div>
-    </div>
-
-    <!--Info-->
-    <div class="row mt-3 mb-2">
-        <div class="col-md-4">
-            <div class="shadow card text-white bg-dark">
-                <div class="card-body">
-                    <b>Total</b>: {{achat.total}} DH <br>
-                    <b>Date De Livraison</b> {{achat.dateLivraison}} <br>
-                    <b>Fournisseur</b><br> Nom:{{achat.fournisseur.nom}}
-                    <br> Email:{{achat.fournisseur.email}}
-                    <br> Address:{{achat.fournisseur.adress}}
-                    <br>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-8">
-            <div class="shadow card text-white bg-dark">
-                <div class="card-header">
-                    <h4>Commande Items</h4>
-                </div>
-                <div class="card-body">
-                    <table class="table text-white table-border">
-                        <thead class=" thead-inverse ">
-                            <tr>
-                                <th>Produit</th>
-                                <th>Catégorie</th>
-                                <th>Unité</th>
-                                <th>Quantite</th>
-                                <th>Prix Unit (DH)</th>
-                                <th>Sous-Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngIf="items.length==0 ">
-                                <td colspan="4 " role="alert ">
-                                    No data to display.
-                                </td>
-                            </tr>
-                            <tr *ngFor="let item of items">
-                                <td>{{item.produit.libelle}}</td>
-                                <td>{{item.produit.cat.libelle}}</td>
-                                <td>{{item.produit.unite.libelle}}</td>
-                                <td>{{item.qteCommander}}</td>
-                                <td>{{item.produit.prix}}</td>
-                                <td>{{item.totalPrice}} DH</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--Info-->
-</div>
-<!--List-->
+<!--Demmande De Prix-->
+<!--Bon De Commande Aprés Un Devis-->
+<app-commande-bon [isNew]="0" [hidden]="achat.statut!==statuts[2] || edit==0"></app-commande-bon>
+<!--Bon De Commande Final-->
+<app-commande-bon-final [hidden]="achat.statut!==statuts[3] || edit==1"></app-commande-bon-final>
