Add Paiements Service

--- a/src/app/view/achat/achat-list/achat-list.component.html
+++ b/src/app/view/achat/achat-list/achat-list.component.html
@@ -60,7 +60,7 @@
                     <td>{{achat.dateLivraison}}</td>
                     <td>
                         <button (click)="onAchatDelete(achat)" class="btn btn-danger fa fa-trash mr-2"></button>
-                        <button class="btn btn-primary fa fa-eye mr-2" (click)="onAchatShow()"></button>
+                        <button class="btn btn-primary fa fa-eye mr-2" (click)="onAchatShow(achat)"></button>
                     </td>
             </tbody>
 
