--- a/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
+++ b/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
@@ -36,6 +36,19 @@
                     <i class="fa fa-plus" aria-hidden="true"></i> Crée Bon De Commande</a>
             </div>
 
+            <!--Paiement-->
+
+
+            <a style="color: white;" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsepai">
+                Paiement <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
+            </a>
+
+            <div id="collapsepai" class="collapse bg-dark" data-parent="#accordion">
+                <a style="color: white;" [routerLink]="['paiements']" class="bg-dark list-group-item list-group-item-action">
+                    <i class="fa fa-money" aria-hidden="true"></i> Achat Paiement</a>
+            </div>
+
+
 
 
             <!--Fournisseur-->
