--- a/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
+++ b/src/app/view/dashboard/comptable-dash-board/comptable-dash-board.component.html
@@ -1,15 +1,15 @@
 <div class="d-flex" id="wrapper">
     <!-- Sidebar -->
     <div class="bg-dark border-right" id="sidebar-wrapper">
-        <div class="sidebar-heading">
-
-        </div>
+        <div class="sidebar-heading"><img src="https://www.supmaroc.com/wp-content/uploads/FST-marrakech.jpg" alt="" height="80px" width="200px"></div>
         <hr style="color: white;">
         <div class="list-group list-group-flush" id="accordion">
 
             <!--Expression-->
-
-            <a style="color: white;" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseeb">
+            <a style="color: rgb(14, 13, 13);" [routerLink]="['/login']" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseeb">
+               Login<i style="float: right; bottom: 0;" class="fa fa-user" aria-hidden="true"></i>
+            </a>
+            <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseeb">
                 Expression <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
@@ -22,7 +22,7 @@
             <!--Achat-->
 
 
-            <a style="color: white;" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseachat">
+            <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseachat">
                 Achat <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
@@ -39,7 +39,7 @@
             <!--Paiement-->
 
 
-            <a style="color: white;" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsepai">
+            <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsepai">
                 Paiement <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
@@ -52,7 +52,7 @@
 
 
             <!--Fournisseur-->
-            <a style="color: white;" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsefourni">
+            <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsefourni">
                 Fournisseur <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
@@ -67,27 +67,27 @@
 
             <!--Produits-->
 
-            <a style="color: white;" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseprod">
+            <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapseprod">
                 Produits <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
             <div id="collapseprod" class="collapse bg-dark" data-parent="#accordion">
 
-                <a style="color: white;" style="color: white; " class="bg-dark list-group-item list-group-item-action" [routerLink]="['produit']">
+                <a style="color: white;" class="bg-dark list-group-item list-group-item-action" [routerLink]="['produit']">
                     <i class="fa fa-plus-square" aria-hidden="true"></i> Ajouter un Produit</a>
                 <a style="color: white;" [routerLink]="['produits']" class="bg-dark list-group-item list-group-item-action">
                     <i class="fa fa-list" aria-hidden="true"></i> List Des Produit</a>
             </div>
             <!--Stock-->
-            <a style="color: white;" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsestock">
+            <a style="color: rgb(14, 13, 13);" class="list-group-item list-group-item-action bg-info collapsed" data-toggle="collapse" href="#collapsestock">
                 Stocks <i style="float: right; bottom: 0;" class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
 
             <div id="collapsestock" class="collapse bg-dark" data-parent="#accordion">
 
-                <a style="color: white;" style="color: white; " class="bg-dark list-group-item list-group-item-action" [routerLink]="['stock']">
+                <a style="color: white;"  class="bg-dark list-group-item list-group-item-action" [routerLink]="['stock']">
                     <i class="fa fa-plus-square" aria-hidden="true"></i> Ajouter un Stock</a>
-                <a style="color: white;" style="color: white; " class="bg-dark list-group-item list-group-item-action" [routerLink]="['stocks']">
+                <a style="color: white;"  class="bg-dark list-group-item list-group-item-action" [routerLink]="['stocks']">
                     <i class="fa fa-list" aria-hidden="true"></i>List des Stocks</a>
             </div>
 
